--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,7 @@
 /addons/example
 /sjkglrj/*
 /application/admin/command/Install/*.lock
-/public/assets/addons/adminlte
-/public/assets/addons/bootstrap
-/public/assets/addons/example
-/public/assets/addons/cms/js
-/public/assets/addons/cms/css
-/public/assets/addons/cms/fonts
-/public/assets/addons/cms/less
+/public/assets/addons/*
 /public/uploads/*
 .idea
 composer.lock
