--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /addons/adminlte
 /addons/bootstrap
 /addons/example
+/addons/simditor
 /sjkglrj/*
 /application/admin/command/Install/*.lock
 /public/assets/addons/*
