--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /addons/example
 /addons/simditor
 /addons/summernote
+/addons/calendar
 /sjkglrj/*
 /application/admin/command/Install/*.lock
 /public/assets/addons/*
